css change and port change

--- a/userInterface/css/less/style.less
+++ b/userInterface/css/less/style.less
@@ -7,7 +7,8 @@
 
 html, body {
   font-family: 'NotoSans', SansSerif, sans-serif;
-  width:100%;
+  width: 100vw;
+  height: 100vh;
 }
 
 table {
@@ -38,7 +39,6 @@ table {
 
 }
 
-
 .price {
   margin-top: 30px;
   text-align: center;
@@ -59,11 +59,11 @@ table {
     border: 2px solid @bosch-red;
 
     &:active {
-      outline:0;
+      outline: 0;
     }
 
     &:focus {
-      outline:0;
+      outline: 0;
     }
 
     &.active {
