--- a/userInterface/css/less/style.less
+++ b/userInterface/css/less/style.less
@@ -7,16 +7,18 @@
 
 html, body {
   font-family: 'NotoSans', SansSerif, sans-serif;
-  width: 100vw;
-  height: 100vh;
+  width: 80%;
+  height: 80%;
+  cursor: none !important;
 }
 
 table {
   width: 100%;
+  height: 100%;
 
   td {
     width: 50%;
-    padding: 20px;
+    padding: 0 20px;
 
     &.details {
       vertical-align: top;
