--- a/userInterface/css/less/style.less
+++ b/userInterface/css/less/style.less
@@ -7,8 +7,8 @@
 
 html, body {
   font-family: 'NotoSans', SansSerif, sans-serif;
-  width: 80%;
-  height: 80%;
+  width: 80vw;
+  height: 80vh;
   cursor: none !important;
 }
 
