--- a/userInterface/css/less/style.less
+++ b/userInterface/css/less/style.less
@@ -7,7 +7,7 @@
 
 html, body {
   font-family: 'NotoSans', SansSerif, sans-serif;
-  width: 80vw;
+  width: 98vw;
   height: 80vh;
   cursor: none !important;
 }
@@ -15,7 +15,7 @@ html, body {
 table {
   width: 100%;
   height: 100%;
-
+  text-align: center;
   td {
     width: 50%;
     padding: 0 20px;
