user interface improvement

--- a/userInterface/css/less/style.less
+++ b/userInterface/css/less/style.less
@@ -41,6 +41,10 @@ table {
 
 }
 
+.codeGen {
+  margin-top: 30px;
+}
+
 .price {
   margin-top: 30px;
   text-align: center;
@@ -74,4 +78,15 @@ table {
     }
 
   }
+}
+
+#loadingModal {
+  display: none;
+  position: absolute;
+  width: 80%;
+  height: 80%;
+  top:0;
+  left:0;
+  background-color: blue;
+  margin:10%;
 }
