--- a/userInterface/css/less/style.less
+++ b/userInterface/css/less/style.less
@@ -81,12 +81,33 @@ table {
 }
 
 #loadingModal {
-  display: none;
   position: absolute;
   width: 80%;
   height: 80%;
   top:0;
   left:0;
-  background-color: blue;
+  background-color: #ffffff;
   margin:10%;
+  z-index: 999;
+  border-radius: 20px;
+
+  .loading-icon {
+    width: 120px;
+  }
+
+  .loading-text {
+    margin-top: 30px;
+    font-size: 26px;
+    color: @bosch-red;
+  }
+}
+
+#backdrop {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(0,0,0,0.7);
+  z-index: 998;
 }
