select coffee type on load

--- a/userInterface/css/less/style.less
+++ b/userInterface/css/less/style.less
@@ -43,6 +43,7 @@ table {
 
 .codeGen {
   margin-top: 30px;
+  padding-top: 30px;
 }
 
 .price {
@@ -82,12 +83,12 @@ table {
 
 #loadingModal {
   position: absolute;
-  width: 80%;
-  height: 80%;
+  width: 80vw;
+  height: 80vh;
   top:0;
   left:0;
   background-color: #ffffff;
-  margin:10%;
+  margin:5%;
   z-index: 999;
   border-radius: 20px;
 
